updated index and contact form

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Innovative Tech Solutions</title>
+		<title>Innovating Tech Solutions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,13 +25,12 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Innovative Tech Solutions</h1>
+								<h1>Innovating Tech Solutions</h1>
 								<p>Providing simple, effective solutions to your software development needs</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -43,45 +42,42 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
-
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h2 class="major">Our Areas of Expertise</h2>
+								<p>Secure Website Development: In an era where online security is paramount, trust our team to deliver robust and secure website development solutions. Whether you require multi-level authorization functionalities or safeguarding client databases, we specialize in creating digital platforms that prioritize data integrity and user privacy.</p>
+								<p>Software Development: Transforming visionary concepts into functional software is our forte. Partner with us, and experience a collaborative journey where your ideas are meticulously translated into tangible solutions. We thrive on open communication and feedback, ensuring that your software evolves in line with your vision and requirements.</p>
+								<p>Data Analysis and Artificial Intelligence Utilization: Unlock the potential of your data with our expertise in data analysis and artificial intelligence. Whether it's gathering and organizing data or harnessing AI algorithms to derive actionable insights, we offer tailored solutions to empower informed decision-making and drive business growth.</p>
+								<p>Experience the difference of working with a team that's dedicated to your success. Contact us today to discuss how we can bring your projects to life.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Are you seeking to revolutionize your digital presence, streamline your workflows, or create innovative solutions tailored to your unique business needs? Look no further. At Innovating Tech Solutions, we specialize in crafting bespoke software solutions powered by Python's versatility and efficiency.</p>
+								<p>We understand the transformative potential of the correct software solution. Whether you require robust web applications, scalable backend systems, or intricate data analysis tools, our team possesses the expertise to bring your vision to life.</p>
+								<p>Driven by a passion for innovation and a commitment to excellence, we pride ourselves on delivering solutions that not only meet but exceed our clients' expectations. From conceptualization to deployment, we work closely with you every step of the way, ensuring that the final product aligns perfectly with your goals and objectives.</p>
+								<p>At Innovating Tech Solutions, we believe in the power of collaboration and transparency. Our agile development approach empowers you to provide feedback and iterate swiftly, ensuring that the end result is precisely what you envision. Your success is our success, and we're dedicated to helping you achieve it.</p>
+								<p>Whether you're a startup looking to disrupt the market or an established enterprise seeking to stay ahead of the curve, we're here to turn your ideas into reality.</p>
+								<p>Ready to embark on your next digital journey? Get in touch with us today, and let's build something extraordinary together.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">Contact Us</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" id="Name" name="Name" class="fcf-form-control" required>
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" id="Email" name="Email" class="fcf-form-control" required>
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
+											<textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
 										</div>
 									</div>
 									<ul class="actions">
@@ -89,12 +85,6 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
 							</article>
 
 						<!-- Elements -->
@@ -342,9 +332,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+					<div id="footer">
+						<ul class="copyright">
+							<li>&copy; <script type="text/JavaScript">
+								document.write(new Date().getFullYear());
+							</script></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
 
 			</div>
 
